test/cases/phase0/error/new-error/input.tsc
const e = new Error("something failed")
